--- a/helper/X11/makefile
+++ b/helper/X11/makefile
@@ -1,6 +1,7 @@
-ALL: xSendReturn xPasteToWin xFocusWindow
+ALL: xSendReturn xPasteToWin xGetFocusWindow
 
-xFocusWindow : xFocusWindow.cpp
+# -l library, -L search path
+xGetFocusWindow : xGetFocusWindow.cpp
 	g++ $<  -lX11 -L/usr/X11R6/lib -o $@
 xSendReturn : xSendReturn.cpp
 	g++ $<  -lX11 -L/usr/X11R6/lib -o $@
