--- a/X11/makefile
+++ b/X11/makefile
@@ -1,6 +1,8 @@
-ALL: xSendReturn xPasteToWin xGetFocusWindow
+ALL: xSendReturn xPasteToWin xGetFocusWindow xGetClassicsWindow
 
 # -l library, -L search path
+xGetClassicsWindow : xGetClassicsWindow.cpp
+	g++ $<  -lX11 -L/usr/X11R6/lib -o $@
 xGetFocusWindow : xGetFocusWindow.cpp
 	g++ $<  -lX11 -L/usr/X11R6/lib -o $@
 xSendReturn : xSendReturn.cpp
