WIP using regex to find ANSYS window

--- a/X11/makefile
+++ b/X11/makefile
@@ -2,7 +2,7 @@ ALL: xSendReturn xPasteToWin xGetFocusWindow xGetClassicsWindow
 
 # -l library, -L search path
 xGetClassicsWindow : xGetClassicsWindow.cpp
-	g++ $<  -lX11 -L/usr/X11R6/lib -o $@
+	g++ $<  -lX11 -std=c++0x -L/usr/X11R6/lib -o $@
 xGetFocusWindow : xGetFocusWindow.cpp
 	g++ $<  -lX11 -L/usr/X11R6/lib -o $@
 xSendReturn : xSendReturn.cpp
