changed the -command-help-overlay to a global variable

--- a/helper/makefile
+++ b/helper/makefile
@@ -3,7 +3,7 @@ help :
 	@echo "make MODE = A-M package files + tutorials"
 	@echo "make EMACS_SRC = Emacs sources + A-M package files + tutorials"
 	@echo "make EMACS = Windoze version of emacs with pre-configured ANSYS-Mode"
-	@echo "make CONTI = Archive for Alwin"
+	@echo "make CONTI = Archive for my company"
 	@echo "make HTML = update the html documentation"
 	@echo "make TAGS = make the goddam tags!"
 	@echo "make ELC = compile the el files"
